# evaluate-dfs

./: .gitignore  README.md  setup.cfg
evaluate_dfs/: dfs_evaluator.py  match.py  series_evaluator.py
evaluate_dfs/tests/: test_dfs_evaluator.py  test_match.py  test_series_evaluator.py
