[metadata]
name = evaluate_dfs
description = Provides features to evaluate a series or dataframe against another series or dataframe.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yohan10/evaluate-dfs
author = Yohan Kim
author_email = yohankimchi@gmail.com
license = BSD
license_file = LICENSE
version = 0.0.1

classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pandas >= 1.4.2

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    numpy >= 1.22.4
